# LOB-Forge

./: .gitignore  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
configs/: config.yaml  data.yaml  executor.yaml  generator.yaml  predictor.yaml  validation.yaml
lob_forge/: __init__.py  train.py
lob_forge/data/: __init__.py  coinbase_downloader.py  dataset.py  downloader.py  features.py  labels.py  lobster.py  preprocessor.py  schema.py  splits.py  validation.py
lob_forge/evaluation/: __init__.py  backtest.py  lob_bench.py  metrics.py  plots.py  regime_validation.py  stylized_facts.py  validate_generator.py
lob_forge/executor/: __init__.py  agent.py  baselines.py  cost_model.py  environment.py  evaluate.py  train.py
lob_forge/generator/: __init__.py  blocks.py  conditioning.py  ema.py  model.py  noise_schedule.py  train.py  unet.py
lob_forge/predictor/: __init__.py  deeplob.py  linear_baseline.py  losses.py  metrics.py  model.py  train.py  (+4 more)
notebooks/: 01_data_exploration.ipynb  02_predictor_results.ipynb  03_generator_quality.ipynb  04_execution_backtest.ipynb
scripts/: train_all.sh  validate_mps.py
tests/: test_backtest.py  test_baselines.py  test_cost_model.py  test_dataset.py  test_dqn_agent.py  test_eval_metrics.py  test_features.py  test_generator.py  test_labels.py  test_lob_bench.py  test_metrics.py  test_predictor.py  test_preprocessor.py  test_regime_validation.py  test_splits.py  test_stylized_facts.py  test_trainer.py
(+117 files in other folders)
